--- a/app/globals.css
+++ b/app/globals.css
@@ -19,3 +19,9 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+@font-face {
+  font-family: "Malayalam MN";
+  src: url("/fonts/malayalam-mn.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
